--- a/save-points/00-Starting-point/BlazingPizza.Client/BlazingPizza.Client.csproj
+++ b/save-points/00-Starting-point/BlazingPizza.Client/BlazingPizza.Client.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="$(BlazorVersion)" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="$(BlazorVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="$(AspNetCoreVersion)" />
+    <PackageReference Include="Radzen.Blazor" Version="2.3.2" />
   </ItemGroup>
 
   <ItemGroup>
