--- a/save-points/00-Starting-point/BlazingPizza.Client/BlazingPizza.Client.csproj
+++ b/save-points/00-Starting-point/BlazingPizza.Client/BlazingPizza.Client.csproj
@@ -19,5 +19,7 @@
     <ProjectReference Include="..\BlazingPizza.ComponentsLibrary\BlazingPizza.ComponentsLibrary.csproj" />
     <ProjectReference Include="..\BlazingPizza.Shared\BlazingPizza.Shared.csproj" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties wwwroot_4manifest_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
   
 </Project>
