--- a/save-points/00-Starting-point/BlazingPizza.Server/appsettings.json
+++ b/save-points/00-Starting-point/BlazingPizza.Server/appsettings.json
@@ -1,7 +1,13 @@
 {
+  "ConnectionStrings": {
+    "mysqlConn": "server=192.168.219.10;port=3306;uid=jmsadmin;database=adliv;sslmode=None;pwd=tsukitokaze"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
