--- a/src/BlazingPizza.Server/appsettings.json
+++ b/src/BlazingPizza.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=192.168.219.10;port=3306;user id=jmsadmin;password=tsukitokaze;database=ADPHI;CharSet=utf8;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
