--- a/src/BlazingPizza.Shared/BlazingPizza.Shared.csproj
+++ b/src/BlazingPizza.Shared/BlazingPizza.Shared.csproj
@@ -3,11 +3,16 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>7.3</LangVersion>
-    <RootNamespace>BlazingPizza</RootNamespace>
+    <RootNamespace>BlazingPizza.Shared</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BlazingPizza.ComponentsLibrary\BlazingPizza.ComponentsLibrary.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+  </ItemGroup>
+  
 </Project>
