--- a/src/BlazingPizza.Server/appsettings.json
+++ b/src/BlazingPizza.Server/appsettings.json
@@ -1,6 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.219.10;port=3306;user id=jmsadmin;password=tsukitokaze;database=ADPHI;CharSet=utf8;"
+    "DefaultConnection": "Server=192.168.219.10;port=3306;user id=jmsadmin;password=tsukitokaze;database=ADPHI;CharSet=utf8;",
+    "ConSQLServer": "Data Source=192.168.219.10,50282;Initial Catalog=ADPHI;Persist Security Info=True;User ID=sa;Password=sa;"
+  },
+  "jwt": {
+    "key": "KJSERVMOSIDRCMJGHRH98KJSERVMOSIDRCMJGHRH98JMS"
   },
   "Logging": {
     "LogLevel": {
