--- a/src/BlazingPizza.Server/appsettings.json
+++ b/src/BlazingPizza.Server/appsettings.json
@@ -6,6 +6,13 @@
   "jwt": {
     "key": "KJSERVMOSIDRCMJGHRH98KJSERVMOSIDRCMJGHRH98JMS"
   },
+  "EmailConfiguration": {
+    "From": "remote-support@jms-web.co.jp",
+    "SmtpServer": "mail.jms-web.co.jp",
+    "Port": 587,
+    "Username": "remote-support",
+    "Password": "jmsadmin219"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
