--- a/src/BlazingPizza.Client/BlazingPizza.Client.csproj
+++ b/src/BlazingPizza.Client/BlazingPizza.Client.csproj
@@ -8,11 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="wwwroot\js\blazor.polyfill.min.js" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Blazorise" Version="0.8.8.4" />
+    <PackageReference Include="Blazorise.Bootstrap" Version="0.8.8.4" />
+    <PackageReference Include="Blazorise.Charts" Version="0.8.8.4" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.8.8.4" />
     <PackageReference Include="CsvHelper" Version="15.0.1" />
+    <PackageReference Include="iTextSharp.LGPLv2.Core" Version="1.6.3" />
     <PackageReference Include="Markdig" Version="0.17.1" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="$(BlazorVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="$(BlazorVersion)" PrivateAssets="all" />
@@ -25,10 +26,6 @@
     <ProjectReference Include="..\BlazingComponents\BlazingComponents.csproj" />
     <ProjectReference Include="..\BlazingPizza.ComponentsLibrary\BlazingPizza.ComponentsLibrary.csproj" />
     <ProjectReference Include="..\BlazingPizza.Shared\BlazingPizza.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\font\" />
   </ItemGroup>
 
 </Project>
