--- a/src/BlazingPizza.Client/BlazingPizza.Client.csproj
+++ b/src/BlazingPizza.Client/BlazingPizza.Client.csproj
@@ -15,11 +15,12 @@
     <PackageReference Include="CsvHelper" Version="15.0.1" />
     <PackageReference Include="iTextSharp.LGPLv2.Core" Version="1.6.3" />
     <PackageReference Include="Markdig" Version="0.17.1" />
+    <PackageReference Include="MatBlazor" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="$(BlazorVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="$(BlazorVersion)" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="$(BlazorVersion)" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="$(AspNetCoreVersion)" />
-    <PackageReference Include="Radzen.Blazor" Version="2.3.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.2" />
+    <PackageReference Include="Radzen.Blazor" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
