--- a/src/BlazingPizza.Client/BlazingPizza.Client.csproj
+++ b/src/BlazingPizza.Client/BlazingPizza.Client.csproj
@@ -8,27 +8,32 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazor.ContextMenu" Version="1.6.0" />
+    <PackageReference Include="BlazorComponentUtilities" Version="1.6.0" />
+    <PackageReference Include="Blazored.FormExtensions" Version="1.0.0" />
+    <PackageReference Include="Blazored.LocalStorage" Version="2.1.1" />
+    <PackageReference Include="Blazored.Toast" Version="2.0.9" />
+    <PackageReference Include="Blazored.Typeahead" Version="4.3.0" />
     <PackageReference Include="Blazorise" Version="0.8.8.4" />
     <PackageReference Include="Blazorise.Bootstrap" Version="0.8.8.4" />
     <PackageReference Include="Blazorise.Charts" Version="0.8.8.4" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.8.8.4" />
-    <PackageReference Include="CsvHelper" Version="15.0.1" />
-    <PackageReference Include="iTextSharp.LGPLv2.Core" Version="1.6.3" />
-    <PackageReference Include="Markdig" Version="0.17.1" />
+    <PackageReference Include="CsvHelper" Version="15.0.3" />
+    <PackageReference Include="iTextSharp.LGPLv2.Core" Version="1.6.4" />
+    <PackageReference Include="Markdig" Version="0.18.3" />
     <PackageReference Include="MatBlazor" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="$(BlazorVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="$(BlazorVersion)" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="$(BlazorVersion)" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.2" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.6">
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.3" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Radzen.Blazor" Version="2.4.0" />
+    <PackageReference Include="Radzen.Blazor" Version="2.4.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BlazingComponents\BlazingComponents.csproj" />
     <ProjectReference Include="..\BlazingPizza.ComponentsLibrary\BlazingPizza.ComponentsLibrary.csproj" />
     <ProjectReference Include="..\BlazingPizza.Shared\BlazingPizza.Shared.csproj" />
   </ItemGroup>
