EF Core Oracle Test

--- a/ADPHI/Server/appsettings.json
+++ b/ADPHI/Server/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.219.10;port=3306;user id=jmsadmin;password=tsukitokaze;database=ADPHI;CharSet=utf8;",
-    "ConSQLServer": "Data Source=192.168.219.10,50282;Initial Catalog=ADPHI;Persist Security Info=True;User ID=sa;Password=sa;"
+    "ConMySql": "Server=192.168.219.10;port=3306;user id=jmsadmin;password=tsukitokaze;database=ADPHI;CharSet=utf8;",
+    "ConSQLServer": "Data Source=192.168.219.10,50282;Initial Catalog=ADPHI;Persist Security Info=True;User ID=sa;Password=sa;",
+    "ConOracle": "Database=192.168.219.5:1521/SN=orcl.jmssrv2"
   },
   "jwt": {
     "key": "KJSERVMOSIDRCMJGHRH98KJSERVMOSIDRCMJGHRH98JMS"
